# bodb

./: .flake8  .gitignore  README.md  dev-requirements.in  dev-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  tmp.py
.github/workflows/: python-package.yml
examples/: possible.py  simple.py  simple_example.py
src/bodb/: __init__.py  database.py  sql_database.py
src/boslurm/: main.py
tests/: test_bodb.py  test_boslurm.py  test_sql_database.py
