[tool.poetry]
name = "bodb"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^1.3.17"
bayesian-optimization = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
black = "^19.10b0"
pylint = "^2.5.2"
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
